--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "solc": "^0.4.18",
+    "solc": "0.4.18",
     "web3": "0.20.0"
   }
 }
