--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "test_contracts",
+  "name": "ethereum_tutorials",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Evan Botello",
   "license": "MIT",
   "scripts": {
-    "build": "babel buildContract.js --out-file lib.js --no-comments",
-    "printAbi": "babel printAbi.js --out-file transpiledPrintAbi.js --no-comments && node transpiledPrintAbi.js"
+    "build": "babel buildContract.js --out-file build.js --no-comments && node build.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "solc": "0.4.18",
-    "web3": "0.20.0"
+    "bluebird": "3.5.1",
+    "solc": "0.4.21",
+    "web3": "0.20.6"
   }
 }
