update deploy process

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "author": "Evan Botello",
   "license": "MIT",
   "scripts": {
-    "build": "babel buildContract.js --out-file build.js --no-comments && node build.js"
+    "deploy": "babel . --no-comments --ignore node_modules --out-dir build && node build/deploy.js && rm -rf build",
+    "deployGreeterContract": "CONTRACT_PATH=contract_greeter yarn deploy",
+    "deployCoinContract": "CONTRACT_PATH=contract_coin yarn deploy",
+    "deployCrowdfundContract": "CONTRACT_PATH=contract_crowdfund yarn deploy"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
